--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+
+*{
+  box-sizing: border-box;
+  font-family: 'Itim', cursive;
+}
+
+body {
+  background:  #f7f7f7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  margin: 0;
+}
+
+.container {
+  margin: 30px auto;
+  width: 350px;
+}
+
+
+
+
+
+/*  Default Version
 .App {
   text-align: center;
 }
@@ -36,3 +63,4 @@
     transform: rotate(360deg);
   }
 }
+*/
