--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,23 @@ body {
   width: 350px;
 }
 
+.horizontal-menu {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background: burlywood;
+  text-align: center;
+}
 
+.horizontal-menu li{
+  display: inline-block;
+}
 
+.horizontal-menu a{
+  color: #f7f7f7;
+  padding: 16px;
+}
 
 
 /*  Default Version
